[package]
name = 'pallet-orderbook'
version = '2.0.0'
description = 'NFT Dex order book'
edition = '2018'
authors = ['vlbos <https://github.com/vlbos>']
homepage = 'https://substrate.dev'
repository = 'https://github.com/vlbos/orderbook/'
license = 'Unlicense'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.timestamp]
default_features = false
package = 'pallet-timestamp'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'timestamp/std',
]
